infra/infra-security/pod-security-standards.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ahmedelbaz
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
